# ToiletClicker

./: .clang-format  .gitignore  CMakeLists.txt
src/: clicker.cpp  clicker.h  main.cpp
